<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutMode="clipBounds"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextName"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:ellipsize="end"
                android:gravity="bottom"
                android:hint="@string/name_label"
                android:inputType="text"
                android:paddingBottom="20dp"
                android:shadowColor="#957171"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextEmail"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:ellipsize="end"
                android:gravity="bottom"
                android:hint="@string/email_label"
                android:inputType="text"
                android:paddingBottom="20dp"
                android:shadowColor="@color/gray"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonEnter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/label_login" />

    </LinearLayout>

</RelativeLayout>